# fast-next-wordbook

./: .gitignore  README.md
apps/api/: .env.example  README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 5d4998f7ce1f_init.py
apps/api/app/: main.py
apps/api/app/api/: deps.py
apps/api/app/api/v1/: router.py
apps/api/app/api/v1/endpoints/: health.py  search.py  tags.py  words.py
apps/api/app/core/: config.py
apps/api/app/crud/: __init__.py  tag.py  word.py
apps/api/app/models/: __init__.py  example.py  tag.py  word.py  word_tag.py
apps/api/app/schemas/: __init__.py  example.py  search.py  tag.py  word.py
apps/api/tests/: test_health.py
apps/web/: package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/search/: page.tsx
apps/web/app/search/stream/: page.tsx
apps/web/app/study/: page.tsx
apps/web/app/tags/: page.tsx
apps/web/app/tags/[slug]/: page.tsx
apps/web/app/words/[id]/: page.tsx
apps/web/lib/: api.ts  types.ts
